--- a/opex/web/index.html
+++ b/opex/web/index.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
-
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="opex">
+<!--  <meta name="apple-mobile-web-app-capable" content="yes">-->
+<!--  <meta name="apple-mobile-web-app-status-bar-style" content="black">-->
+<!--  <meta name="apple-mobile-web-app-title" content="opex">-->
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png"/>
-
+  <link rel="icon" type="image/png" href="logo.png">
   <title>Sidra Teams</title>
-  <link rel="manifest" href="manifest.json">
-
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-messaging.js"></script>
+<!--  <link rel="manifest" href="manifest.json">-->
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
+      console.log('Registering service worker:', '/firebase-messaging-sw.js');
       window.addEventListener('load', function() {
-        navigator.serviceWorker.register('../firebase-messaging-sw.js')
+        navigator.serviceWorker.register('/firebase-messaging-sw.js')
           .then(function(registration) {
             console.log("Service Worker Registered");
             // Assuming 'messaging' is your Firebase messaging instance
@@ -50,31 +34,34 @@
       });
     }
   </script>
+  <script>
+    window.addEventListener('beforeinstallprompt', function (e) {
+      e.preventDefault();
+      return false;
+    });
+  </script>
 
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
 <script>
-
- const firebaseConfig = {
-  apiKey: "AIzaSyDD6a93rw23pGVSYc9MipHVExobYqIzke0",
-  authDomain: "sidrateams-d9972.firebaseapp.com",
-  projectId: "sidrateams-d9972",
-  storageBucket: "sidrateams-d9972.appspot.com",
-  messagingSenderId: "793852669363",
-  appId: "1:793852669363:web:89668f6104adf08bccafc6",
-  measurementId: "G-DZFYRLTM7X"
-};
-firebase.initializeApp(firebaseConfig);
-
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
+    };
+    firebase.initializeApp(firebaseConfig);
   </script>
-
 <script src="main.dart.js" type="application/javascript"></script>
 <script type="text/javascript">
     window.flutterWebRenderer = "html";
-</script>
-  <script>
+  </script>
+<script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
